CIRCSTORE-416 Addressing review comments